--- a/assets/style.css
+++ b/assets/style.css
@@ -51,10 +51,14 @@ img {
 	font-size: 30px;
 	text-align: center;
 	color: red;
+	width:100%;
+	height:40px;
 }
 
 #resultDivWin{
 	font-size: 30px;
 	text-align: center;
 	color: white;
+	height:40px;
+	width:100%;
 }
